--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BirthdayCakeCandles\BirthdayCakeCandles.cs" />
+    <Compile Include="BirthdayCakeCandles\BirthdayCakeCandles_Test.cs" />
     <Compile Include="GamingArray\GamingArray.cs" />
     <Compile Include="GamingArray\GamingArray_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
