- Created solution class for Breaking the Records (super easy)

--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Include="BirthdayCakeCandles\BirthdayCakeCandles.cs" />
     <Compile Include="BirthdayCakeCandles\BirthdayCakeCandles_Test.cs" />
+    <Compile Include="BreakingTheRecords\BreakingTheRecords.cs" />
+    <Compile Include="BreakingTheRecords\BreakingTheRecords_Test.cs" />
     <Compile Include="GamingArray\GamingArray.cs" />
     <Compile Include="GamingArray\GamingArray_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
