--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -50,6 +50,8 @@
   <ItemGroup>
     <Compile Include="BirthdayCakeCandles\BirthdayCakeCandles.cs" />
     <Compile Include="BirthdayCakeCandles\BirthdayCakeCandles_Test.cs" />
+    <Compile Include="BirthdayChocolate\BirthdayChocolate.cs" />
+    <Compile Include="BirthdayChocolate\BirthdayChocolate_Test.cs" />
     <Compile Include="BreakingTheRecords\BreakingTheRecords.cs" />
     <Compile Include="BreakingTheRecords\BreakingTheRecords_Test.cs" />
     <Compile Include="GamingArray\GamingArray.cs" />
