--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -56,6 +56,8 @@
     <Compile Include="BreakingTheRecords\BreakingTheRecords_Test.cs" />
     <Compile Include="GamingArray\GamingArray.cs" />
     <Compile Include="GamingArray\GamingArray_Test.cs" />
+    <Compile Include="MigratoryBirds\MigratoryBirds.cs" />
+    <Compile Include="MigratoryBirds\MigratoryBirds_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningMedian\RunningMedian.cs" />
     <Compile Include="RunningMedian\RunningMedian_Test.cs" />
