- Solved "Cat and a Mouse" problem, wrote unit tests for - Solved "Electronics Shop" problem, wrote unit tests for

--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -54,8 +54,12 @@
     <Compile Include="BirthdayChocolate\BirthdayChocolate_Test.cs" />
     <Compile Include="BreakingTheRecords\BreakingTheRecords.cs" />
     <Compile Include="BreakingTheRecords\BreakingTheRecords_Test.cs" />
+    <Compile Include="CatsAndMouse\CatsAndMouse.cs" />
+    <Compile Include="CatsAndMouse\CatsAndMouse_Test.cs" />
     <Compile Include="CountingValleys\CountingValleys.cs" />
     <Compile Include="CountingValleys\CountingValleys_Test.cs" />
+    <Compile Include="ElectronicsShop\ElectronicsShop.cs" />
+    <Compile Include="ElectronicsShop\ElectronicsShop_Test.cs" />
     <Compile Include="GamingArray\GamingArray.cs" />
     <Compile Include="GamingArray\GamingArray_Test.cs" />
     <Compile Include="MigratoryBirds\MigratoryBirds.cs" />
