--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -54,6 +54,8 @@
     <Compile Include="BirthdayChocolate\BirthdayChocolate_Test.cs" />
     <Compile Include="BreakingTheRecords\BreakingTheRecords.cs" />
     <Compile Include="BreakingTheRecords\BreakingTheRecords_Test.cs" />
+    <Compile Include="Candies\Candies.cs" />
+    <Compile Include="Candies\CandiesTest.cs" />
     <Compile Include="CatsAndMouse\CatsAndMouse.cs" />
     <Compile Include="CatsAndMouse\CatsAndMouse_Test.cs" />
     <Compile Include="CountingValleys\CountingValleys.cs" />
@@ -72,7 +74,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="RunningMedian\TestCaseInput\TestCase_16_Input.txt" />
+    <Content Include="Candies\TestCaseInput\TestCase_11_Input.txt" />
+    <Content Include="Candies\TestCaseInput\TestCase_2_Input.txt" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
