--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -68,6 +68,8 @@
     <Compile Include="MagicSquare\MagicSquare_Test.cs" />
     <Compile Include="MigratoryBirds\MigratoryBirds.cs" />
     <Compile Include="MigratoryBirds\MigratoryBirds_Test.cs" />
+    <Compile Include="PickingNumbers\PickingNumbers.cs" />
+    <Compile Include="PickingNumbers\PickingNumbers_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningMedian\RunningMedian.cs" />
     <Compile Include="RunningMedian\RunningMedian_Test.cs" />
