--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -70,6 +70,8 @@
     <Compile Include="MigratoryBirds\MigratoryBirds_Test.cs" />
     <Compile Include="PickingNumbers\PickingNumbers.cs" />
     <Compile Include="PickingNumbers\PickingNumbers_Test.cs" />
+    <Compile Include="PowerSum\PowerSum.cs" />
+    <Compile Include="PowerSum\PowerSum_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunningMedian\RunningMedian.cs" />
     <Compile Include="RunningMedian\RunningMedian_Test.cs" />
