--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -74,6 +74,8 @@
     <Compile Include="PowerSum\PowerSum.cs" />
     <Compile Include="PowerSum\PowerSum_Test.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecursiveDigitSum\RecursiveDigitSum.cs" />
+    <Compile Include="RecursiveDigitSum\RecursiveDigitSum_Test.cs" />
     <Compile Include="RunningMedian\RunningMedian.cs" />
     <Compile Include="RunningMedian\RunningMedian_Test.cs" />
     <Compile Include="Algorithm_Test.cs" />
