- Wrote solution and unit tests for Climbing the Leaderboard problem

--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -59,6 +59,8 @@
     <Compile Include="Candies\CandiesTest.cs" />
     <Compile Include="CatsAndMouse\CatsAndMouse.cs" />
     <Compile Include="CatsAndMouse\CatsAndMouse_Test.cs" />
+    <Compile Include="ClimbingTheLeaderboard\ClimbingTheLeaderboard.cs" />
+    <Compile Include="ClimbingTheLeaderboard\ClimbingTheLeaderboard_Test.cs" />
     <Compile Include="CountingValleys\CountingValleys.cs" />
     <Compile Include="CountingValleys\CountingValleys_Test.cs" />
     <Compile Include="CrosswordPuzzle\CrosswordPuzzle.cs" />
