--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -87,6 +87,8 @@
     <Compile Include="RunningMedian\RunningMedian.cs" />
     <Compile Include="RunningMedian\RunningMedian_Test.cs" />
     <Compile Include="Algorithm_Test.cs" />
+    <Compile Include="WeekOfCode32\CircularWalk\CircularWalk.cs" />
+    <Compile Include="WeekOfCode32\CircularWalk\CircularWalk_Test.cs" />
     <Compile Include="WeekOfCode32\Duplication\Duplication.cs" />
     <Compile Include="WeekOfCode32\Duplication\Duplication_Test.cs" />
     <Compile Include="WeekOfCode32\FightTheMonsters\FightTheMonsters.cs" />
