- Created solution to Geometric Trick problem. This times out on the last few   preliminary test cases. - Possible TODO: Optimize

--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -93,6 +93,8 @@
     <Compile Include="WeekOfCode32\Duplication\Duplication_Test.cs" />
     <Compile Include="WeekOfCode32\FightTheMonsters\FightTheMonsters.cs" />
     <Compile Include="WeekOfCode32\FightTheMonsters\FightTheMonsters_Test.cs" />
+    <Compile Include="WeekOfCode32\GeometricTrick\GeometricTrick.cs" />
+    <Compile Include="WeekOfCode32\GeometricTrick\GeometricTrick_Test.cs" />
     <Compile Include="WeightedUniformStrings\WeightedUniformStrings_Test.cs" />
     <Compile Include="WeightedUniformStrings\WeightedUniformStrings.cs" />
   </ItemGroup>
