- Added solution for Minimum Absolute Difference (easy) and verification tests

--- a/HackerRankSolutions/HackerRankSolutions.csproj
+++ b/HackerRankSolutions/HackerRankSolutions.csproj
@@ -75,6 +75,8 @@
     <Compile Include="MagicSquare\MagicSquare_Test.cs" />
     <Compile Include="MigratoryBirds\MigratoryBirds.cs" />
     <Compile Include="MigratoryBirds\MigratoryBirds_Test.cs" />
+    <Compile Include="MinimumAbsoluteDifference\MinimumAbsoluteDifference.cs" />
+    <Compile Include="MinimumAbsoluteDifference\MinimumAbsoluteDifference_Test.cs" />
     <Compile Include="NonDivisibleSubset\NonDivisibleSubset.cs" />
     <Compile Include="NonDivisibleSubset\NonDivisibleSubset_Test.cs" />
     <Compile Include="PickingNumbers\PickingNumbers.cs" />
